--- a/deprecated/JDS_response.tex
+++ b/deprecated/JDS_response.tex
@@ -130,13 +130,15 @@ I am grateful for your constructive feedback that helped greatly improve the pap
 
 \textit{I encourage the authors to ensure that the text is clear and concise. For instance, terms such as "imputation of national growth rates" and "extreme tax schedules" should be clearly explained for a broader audience. Another example of unclear statements can be found in the introduction (second paragraph). “I fix the rate (at 100\%) and find the required taxation threshold”. From the very beginning of the paper, it is not clear what this sentence means. The first paragraph of Section 3.4 reads, “Figure 2 presents the (additional) tax rate”. What does additional mean? Additional to the antipoverty cap? }~\\
 
+% after extreme domestic redistribution that would equalize all incomes.
+
 Thank you for allowing me to clarify the text. In the Introduction, I now explain in more detail the concepts used in the paper. They were originally succinctely presented as follows: ``\textit{I estimate the parameter of two tax policies that would raise enough revenues to eradicate poverty. In the ``antipoverty cap'', I fix the rate (at 100\%) and find the required taxation threshold. In the ``antipoverty tax'', I fix the threshold and find the rate needed. As a last indicator, I fix both the threshold and the rate and compute the income floor that the tax could finance.}'' 
 
 They are now pedagogically explained: ``\textit{I estimate the parameter of two tax policies that would raise enough revenue to eradicate poverty. In the ``antipoverty cap'', I fix the tax rate at its maximum value of 100\% so that the tax effectively becomes a cap on top incomes, and I find the required cap (or taxation threshold). All income above the cap is assumed to be redistributed to the lowest incomes in order to eradicate poverty. In the ``antipoverty tax'', I fix the taxation threshold and find the tax rate needed to raise the revenue required to eradicate poverty. As a last indicator, I fix both the taxation threshold and the tax rate and compute the income floor that the tax could finance (by redistributing tax revenue to the lowest incomes).}''
 
 Besides, I replaced ``imputing growth'' by ``adjusting it for growth'' in the occurrence of ``imputing'': ``BCL study the data as it stands rather than imputing growth''. I could not find any occurrence of ``extreme tax schedules'' in the text. However, I realized that the term ``anti-extreme-poverty tax'' might not be clear enough, so I italicized ``extreme-poverty'': it now reads ``anti-\textit{extreme-poverty} tax'' everywhere in the text.
 
-I also removed ``(additional)'' from ``Figure 2 presents the (additional) tax rate'' and added a sentence to clarify: ``Note that this hypothetical tax would apply on top of existing taxes.'' 
+I also removed ``(additional)'' from ``Figure 2 presents the (additional) tax rate'' and added a sentence in the ``Methodology'' section to clarify: ``Note that these hypothetical policies would apply on top of existing taxes.'' 
 
 Finally, I added the following words in bold to clarify our abstract: ``With credible annual growth of 3\%, even capping incomes at \$7 a day \textbf{(to finance an increase in incomes for the poorest individuals)} cannot eradicate extreme poverty in 5 low-income countries.''
 
@@ -150,7 +152,7 @@ To highlight the paper's contributions, I added two paragraphs in the introducti
 
 The first one is right before the \textit{Literature} paragraph and reads: ``\textit{To assess the prospects of achieving the first SDG, I explore in turn the effects of balanced growth alone, idealized national redistribution policies, and idealized global redistribution. The thought experiments are not meant to be exhaustive or representative pathways to achieving the first SDG. They are presented to demonstrate that relying on growth and domestic policies alone would fall short of eradicating poverty by 2030. This impossibility result is robust to a wide range of growth and redistribution scenarios, including extremely optimistic ones. In contrast, global solidarity has the potential to dramatically accelerate poverty eradication.}'' This last insight conveys a policy implication for SDG1.
 
-The second newly added paragraph concludes the Introduction and reads: ``\textit{The main contribution of this paper is to provide an explicit assessment of the prospects for achieving the first SDG. While existing studies estimate the poverty reduction that can be achieved through either growth or domestic redistribution, I study the combination of both. I also introduce the notion of \textit{income floor} as a measure of credible potential for redistribution. Finally, I improve upon existing studies by presenting results in the form of world maps and by providing an open source code to work with global inequality data: \href{https://github.com/bixiou/domestic_poverty_eradication}{github.com/bixiou/domestic\_poverty\_eradication}. This code offers ready-to-use functions to compute all sorts of inequality indicators (Gini, top 10\% share, antipoverty tax rate, etc.) and plot world maps of these indicators.}''
+The second newly added paragraph concludes the Introduction and reads: ``\textit{The main contribution of this paper is to provide an explicit assessment of the prospects for achieving the first SDG. While existing studies estimate the poverty reduction that can be achieved through either growth or domestic redistribution, I study the combination of both. I also introduce the notion of \textit{income floor} as a measure of the credible potential for redistribution. Finally, I improve upon existing studies by presenting results in the form of world maps and by providing an open source code to work with global inequality data: \href{https://github.com/bixiou/domestic_poverty_eradication}{github.com/bixiou/domestic\_poverty\_eradication}. This code offers ready-to-use functions to compute all sorts of inequality indicators (Gini, top 10\% share, antipoverty tax rate, etc.) and plot world maps of these indicators.}''
 
 Furthermore, I added a new analysis on the effects of \textit{unbalanced} growth, on top of the paper's main assumption of balanced growth. At the end of Section ``Data'', I now justify the main assumption of balanced growth: ``\textit{This assumption allows separating the effects of growth alone from those of a change in the income distribution.}'' Besides, at the end of the first paragraph of Section ``The effect of balanced growth'', I added: 
 ``\textit{In Supplementary Material, I show that the assumption of balanced growth has little effect on the poverty estimates compared to an alternative assumption where national inequality evolves just as in the recent past. This is because inequality has been quite stable over the last years of data, with two thirds of percentile shares growing or contracting by less than 1\% per year.}'' In Table 1 of the main text and in a new Supplementary Material, one can observe that the assumption of balanced growth is innocuous. Indeed, extending recent trends in inequality has very little effect on estimates of poverty or capacity for domestic poverty eradication. 
@@ -167,7 +169,7 @@ Anand \& Segal (2015) discuss common issues regarding the global income distribu
 
 To clarify the relation of the concept I study to the extant literature, I added the words in bold at the beginning of the ``Literature'' paragraph: ``\textit{\textbf{The idea to measure the domestic capacity to eradicate poverty with an antipoverty cap originates in Medeiros (2006) (who calls it the ``affluence line'').} In turn, the idea to measure it with an antipoverty tax dates back to Ravallion (2010) and Ceriani \& Verme (2014) \textbf{(the latter paper dubs it ``income lever'')}.}''
 
-I now also explain at the end of the introduction that ``\textit{I also introduce the notion of \textit{income floor} as a measure of credible potential for redistribution}'', and I acknowledge in Section 3.5 that the tax schedule used to measure the income floor that can be funded \textit{is conservatively inspired by \cite{ravallion_poorer_2010}, who uses a rate of 10\% but a higher threshold (corresponding to \$18/day) to assess whether a country has a high or low capacity to eradicate poverty.}
+I now also explain at the end of the introduction that ``\textit{I also introduce the notion of \textit{income floor} as a measure of the credible potential for redistribution}'', and I acknowledge in Section 3.5 that the tax schedule used to measure the income floor that can be funded \textit{is conservatively inspired by \cite{ravallion_poorer_2010}, who uses a rate of 10\% but a higher threshold (corresponding to \$18/day) to assess whether a country has a high or low capacity to eradicate poverty.}
 
 While I compared my results to those of Bolch et al. (2022) only in Section 3.3, I have now added a summary of the comparison in the ``Literature'' paragraph. 
 Compared to the literature, the main advancement is to introduce growth scenarios. I now highlight this contribution better in by comparing the results to those of Bolch et al. (2022): 
@@ -192,10 +194,10 @@ response
 
 I recognize that global redistribution \textit{might be} politically or technically infeasible. This observation should not compromise the modest goal of the paper, which is to demonstrate that SDG1 cannot be achieved without global redistribution. If, in addition, global redistribution turns out to be infeasible, it would mean that SDG1 cannot be achieved. In the present paper, I remain agnostic regarding the feasibility of global redistribution and simply note that this \textit{might be} a path towards SDG1. Knowing that global solidarity is the only way to achieve SDG1, it may be worth studying the feasibility of this path rather than neglecting its possibility entirely. 
 While addressing the feasibility of global redistribution remains outside the scope of this paper, I added the following paragraph analyzing the challenges it represents: 
-``\textit{While global solidarity has the potential to eradicate poverty, it may also prove politically and technically feasible. 
+``\textit{While global solidarity has the potential to eradicate poverty, one may wonder whether it is politically and technically feasible. 
 %While global solidarity has the potential to eradicate poverty, it might prove politically or technically infeasible. 
 %Nevertheless, attitudinal surveys and recent technological progress call for a thorough examination of this possibility. 
-Regarding political acceptability, (Fabre et al., 2023) show overwhelming support for a global tax on millionaires that would finance low-income countries, reaching 69\% in the U.S. and 84\% in Europe. %Along political feasibility, implementation challenges might be another hurdle for global redistribution. On the one hand, 
+Regarding political acceptability, while government support seems currently unlikely, (Fabre et al., 2023) show overwhelming support for a global tax on millionaires that would finance low-income countries, reaching 69\% in the U.S. and 84\% in Europe. %Along political feasibility, implementation challenges might be another hurdle for global redistribution. On the one hand, 
 As for implementation, government programs offer a proven path to poverty reduction through the deployment of public services, social protection, and infrastructures. 
 Yet, our idealized policies entail direct cash transfers to the poorest households. Such transfers may offer a reliable way to alleviate poverty (Haushofer et al., 2016; Egger et al., 2022), but could be challenging to implement. In this regard, progress in payment infrastructures has been encouraging. In particular, the World Bank's \textit{Identification for Development} program finances identification systems in 57 of the world's poorest countries (World Bank 2017, 2020, 2022), with the aim of ``providing legal identity for all'' in line with SDG n\textdegree{}16.9. This identification makes it possible to offer numerous services, including cash transfers. In India, the Aadhaar system has provided a unique biometric identifier for 99\% of the adult population in just 8 years. Aadhaar is linked to bank accounts and already used to distribute social benefits (Muralidharan, 2023). In less than two weeks, Togo has set up a mobile money transfer for one million people to compensate for the loss of income suffered by informal workers in confined areas during the COVID pandemic (Ipa, 2021). Finally, affordable satellite internet and solar panels are making mobile payments accessible in remote areas.}''
 ~\\ ~\\
@@ -208,7 +210,9 @@ In the antipoverty cap, the income of expropriated individuals would be set at t
 \textit{A thorough discussion of the study's limitations is essential to enhance its credibility and contextualize its findings. This discussion should be integrated into the final sections of the paper to provide a balanced perspective and acknowledge potential constraints. For instance, the scenarios are based on specific assumptions about global trends and policies, which may not account for heterogeneity across countries and regions. A discussion about these contextual factors would help frame the study's conclusions more accurately. The study focuses primarily on economic variables, such as growth, taxation, and redistribution. }~\\
 \textit{However, non-economic factors like education, healthcare access, and social protection systems also play critical roles in poverty reduction. Acknowledging the exclusion of these dimensions would provide a more nuanced view of the analysis.}~\\
 
-% TODO
+I agree that the paper lacked a proper discussion of its limitations. I added a paragraph at the end of the conclusion to address this concern. I do not mention the paper's assumption about global trends and policies, given that these assumptions cover a wide range of scenarios. In particular, the paper includes scenarios with country-specific poverty lines (the BCS line), country-specific growth trends, and now also includes a scenario with country-specific inequality trend (the \textit{unbalanced growth} scenario). Therefore, I consider that the paper already accounts for heterogeneity across countries. However, it suffers from other limitations, including on non-economic factors, which I acknowledge as follows:  
+
+``\textit{Finally, a number of limitations prevent the paper from providing definitive estimates of domestic capacities to eradicate poverty. First, while PIP data is arguably the most appropriate to measure absolute poverty, it does not adequately capture investment, government spending, and top incomes. To better capture in-kind consumption of public services, Fisher-Post \& Gethin (2023) offer a promising database, though the poverty lines would need to be adjusted accordingly. Second, estimates could be improved when PIP releases a data update, with more recent surveys and prices expressed in 2023 PPP \$. Third, the poverty gap may not be the most accurate measure of the resources needed to eradicate poverty. Instead, it may be more relevant to consider non-economic factors like education and healthcare access, or government programs like social assistance, and assess their cost. }''
 ~\\ ~\\
 
 
@@ -234,14 +238,14 @@ Compared to BCL, the present paper offers several improvements: (i) it uses more
 
 While I recognize that my paper presents little methodological novelty compared to BCL (in the same way that BCL did not offer much methodological novelty compared to Ravallion, 2010), I believe that it offers a timely contribution to the assessment of the first SDG. Indeed, BCL cannot be used to assess the prospects for achieving the first SDG; the paper's improvements are necessary to do so. 
 
-To highlight the paper's contributions, I added the following paragraph at the end of the Introduction: \textit{The main contribution of this paper is to provide an explicit assessment of the prospects for achieving the first SDG. While existing studies estimate the poverty reduction that can be achieved through either growth or domestic redistribution, I study the combination of both. I also introduce the notion of \textit{income floor} as a measure of credible potential for redistribution. Finally, I improve upon existing studies by presenting results in the form of world maps and by providing an open source code to work with global inequality data: \href{https://github.com/bixiou/domestic_poverty_eradication}{github.com/bixiou/domestic\_poverty\_eradication}. This code offers ready-to-use functions to compute all sorts of inequality indicators (Gini, top 10\% share, antipoverty tax rate, etc.) and plot world maps of these indicators.}
+To highlight the paper's contributions, I added the following paragraph at the end of the Introduction: \textit{The main contribution of this paper is to provide an explicit assessment of the prospects for achieving the first SDG. While existing studies estimate the poverty reduction that can be achieved through either growth or domestic redistribution, I study the combination of both. I also introduce the notion of \textit{income floor} as a measure of the credible potential for redistribution. Finally, I improve upon existing studies by presenting results in the form of world maps and by providing an open source code to work with global inequality data: \href{https://github.com/bixiou/domestic_poverty_eradication}{github.com/bixiou/domestic\_poverty\_eradication}. This code offers ready-to-use functions to compute all sorts of inequality indicators (Gini, top 10\% share, antipoverty tax rate, etc.) and plot world maps of these indicators.}
 ~\\ ~\\
 
 \textit{2.	Absence of a theoretical framework}
 \textit{This paper employs a methodology like Bolch et al. (2022) to assess which countries have sufficient domestic resources to achieve the first SDG. It is important to briefly discuss this framework in the paper in a separate methodology section as I had to go back to Bolch et al. (2022) to refresh my knowledge about this methodology. }~\\
 
 % TODO 
-To make the methodological section more visible, I renamed it ``Methodology: idealized redistributive policies''. I have completed it by the description of the income floor as follows: ``\textit{I also introduce another policy: (iii) the ``income floor'' that could be funded by a given, realistic tax schedule. The poverty gap can be closed by this tax schedule when the income floor exceeds the poverty threshold.}'' 
+To make the methodological section more visible, I renamed it ``Methodology: idealized redistributive policies''. I have completed it by the description of the income floor as follows: ``\textit{I also introduce another policy: (iii) the ``income floor'' that could be funded by a given, realistic tax schedule. The poverty gap can be closed by this tax schedule when the income floor exceeds the poverty line.}'' 
 
 I believe that all methodological information given in Bolch et al. (2022) is now explicited in the paper.
 ~\\ ~\\
@@ -262,7 +266,7 @@ To emphasize that no causal inference can be drawn from the paper, I added the f
 
 I added two paragraphs in the introduction to address this concern. The first one is right before the \textit{Literature} paragraph and reads: ``\textit{To assess the prospects of achieving the first SDG, I explore in turn the effects of balanced growth alone, idealized national redistribution policies, and idealized global redistribution. The thought experiments are not meant to be exhaustive or representative pathways to achieving the first SDG. They are presented to demonstrate that relying on growth and domestic policies alone would fall short of eradicating poverty by 2030. This impossibility result is robust to a wide range of growth and redistribution scenarios, including extremely optimistic ones. In contrast, global solidarity has the potential to dramatically accelerate poverty eradication.}''
 
-The second one concludes the Introduction and reads: ``\textit{The main contribution of this paper is to provide an explicit assessment of the prospects for achieving the first SDG. While existing studies estimate the poverty reduction that can be achieved through either growth or domestic redistribution, I study the combination of both. I also introduce the notion of \textit{income floor} as a measure of credible potential for redistribution. Finally, I improve upon existing studies by presenting results in the form of world maps and by providing an open source code to work with global inequality data: \href{https://github.com/bixiou/domestic_poverty_eradication}{github.com/bixiou/domestic\_poverty\_eradication}. This code offers ready-to-use functions to compute all sorts of inequality indicators (Gini, top 10\% share, antipoverty tax rate, etc.) and plot world maps of these indicators.}''
+The second one concludes the Introduction and reads: ``\textit{The main contribution of this paper is to provide an explicit assessment of the prospects for achieving the first SDG. While existing studies estimate the poverty reduction that can be achieved through either growth or domestic redistribution, I study the combination of both. I also introduce the notion of \textit{income floor} as a measure of the credible potential for redistribution. Finally, I improve upon existing studies by presenting results in the form of world maps and by providing an open source code to work with global inequality data: \href{https://github.com/bixiou/domestic_poverty_eradication}{github.com/bixiou/domestic\_poverty\_eradication}. This code offers ready-to-use functions to compute all sorts of inequality indicators (Gini, top 10\% share, antipoverty tax rate, etc.) and plot world maps of these indicators.}''
 ~\\ ~\\
 
 \textit{5. In the conclusion, the author mentions the case of China's profound government commitment. It is important that the author highlights how feasible such interventions in other developing countries, whether there could be any institutional barriers. Finally, as the author alludes to transfer based on international solidarity as a panacea to eradicate extreme poverty, it would be nice to discuss some policy directives on this matter. How feasible are these interventions based on the transfer of global income to eradicate poverty? This question remains largely unanswered in this paper.}~\\
@@ -271,10 +275,10 @@ To acknowledge the institutional barriers to a replication of the Chinese miracl
 so even if it replicates the Chinese miracle, \textbf{which is not easy given its institutional capacity,} it will not be able to eradicate extreme poverty on its own before 2055.''
 
 While addressing the feasibility of global redistribution remains outside the scope of this paper, I added the following paragraph analyzing the challenges it represents at the end of Section 3.6: 
-``\textit{While global solidarity has the potential to eradicate poverty, it may also prove politically and technically feasible. 
+``\textit{While global solidarity has the potential to eradicate poverty, one may wonder whether it is politically and technically feasible. 
 %While global solidarity has the potential to eradicate poverty, it might prove politically or technically infeasible. 
 %Nevertheless, attitudinal surveys and recent technological progress call for a thorough examination of this possibility. 
-Regarding political acceptability, (Fabre et al., 2023) show overwhelming support for a global tax on millionaires that would finance low-income countries, reaching 69\% in the U.S. and 84\% in Europe. %Along political feasibility, implementation challenges might be another hurdle for global redistribution. On the one hand, 
+Regarding political acceptability, while government support seems currently unlikely, (Fabre et al., 2023) show overwhelming support for a global tax on millionaires that would finance low-income countries, reaching 69\% in the U.S. and 84\% in Europe. %Along political feasibility, implementation challenges might be another hurdle for global redistribution. On the one hand, 
 As for implementation, government programs offer a proven path to poverty reduction through the deployment of public services, social protection, and infrastructures. 
 Yet, our idealized policies entail direct cash transfers to the poorest households. Such transfers may offer a reliable way to alleviate poverty (Haushofer et al., 2016; Egger et al., 2022), but could be challenging to implement. In this regard, progress in payment infrastructures has been encouraging. In particular, the World Bank's \textit{Identification for Development} program finances identification systems in 57 of the world's poorest countries (World Bank 2017, 2020, 2022), with the aim of ``providing legal identity for all'' in line with SDG n\textdegree{}16.9. This identification makes it possible to offer numerous services, including cash transfers. In India, the Aadhaar system has provided a unique biometric identifier for 99\% of the adult population in just 8 years. Aadhaar is linked to bank accounts and already used to distribute social benefits (Muralidharan, 2023). In less than two weeks, Togo has set up a mobile money transfer for one million people to compensate for the loss of income suffered by informal workers in confined areas during the COVID pandemic (Ipa, 2021). Finally, affordable satellite internet and solar panels are making mobile payments accessible in remote areas.}''
 ~\\ ~\\
