--- a/paper/poverty.bib
+++ b/paper/poverty.bib
@@ -344,6 +344,20 @@
   url = {https://www.ssrn.com/abstract=4448523}
 }
 
+@article{fisher-post_government_2023,
+  title = {Government {{Redistribution}} and {{Development}}, {{Global Estimates}} of {{Tax-and-Transfer Progressivity}}, 1980-2019},
+  author = {{Fisher-Post}, M and Gethin, A},
+  year = {2023}
+}
+
+@article{fisher-post_government_2023-1,
+  title = {Government {{Redistribution}} and {{Development Global Estimates}} of {{Tax}} and {{Transfer Progressivity}} 1980-2019},
+  author = {{Fisher-Post}, Matthew and Gethin, Amory},
+  year = {2023},
+  pages = {101 p.},
+  url = {https://shs.hal.science/halshs-04423529}
+}
+
 @techreport{gradin_trends_2021,
   type = {Working {{Paper}}},
   title = {Trends in Global Inequality Using a New Integrated Dataset},
@@ -368,17 +382,6 @@
 }
 
 @techreport{gradin_wiid_2021-1,
-  title = {{{WIID Companion}} ({{March}} 2021): Integrated and Standardized Series},
-  shorttitle = {{{WIID Companion}} ({{March}} 2021)},
-  author = {Grad{\'i}n, Carlos},
-  year = {2021},
-  month = mar,
-  institution = {UNU-WIDER},
-  doi = {10.35188/UNU-WIDER/WTN/2021-5},
-  url = {https://www.wider.unu.edu/node/238515}
-}
-
-@techreport{gradin_wiid_2021-2,
   title = {{{WIID Companion}} ({{March}} 2021): Data Selection},
   shorttitle = {{{WIID Companion}} ({{March}} 2021)},
   author = {Grad{\'i}n, Carlos},
@@ -387,6 +390,17 @@
   institution = {UNU-WIDER},
   doi = {10.35188/UNU-WIDER/WTN/2021-4},
   url = {https://www.wider.unu.edu/node/238513}
+}
+
+@techreport{gradin_wiid_2021-2,
+  title = {{{WIID Companion}} ({{March}} 2021): Integrated and Standardized Series},
+  shorttitle = {{{WIID Companion}} ({{March}} 2021)},
+  author = {Grad{\'i}n, Carlos},
+  year = {2021},
+  month = mar,
+  institution = {UNU-WIDER},
+  doi = {10.35188/UNU-WIDER/WTN/2021-5},
+  url = {https://www.wider.unu.edu/node/238515}
 }
 
 @article{haushofer_short-term_2016,
@@ -499,6 +513,13 @@
   title = {World {{Economic Outlook}}},
   author = {IMF, .},
   year = {2023}
+}
+
+@techreport{ipa_togos_2021,
+  title = {Togo's {{Novissi Cash Transfer}}: {{Designing}} and {{Implementing}} a {{Fully Digital Social Assistance Program}} during {{COVID-19}}},
+  author = {{ipa}},
+  year = {2021},
+  url = {https://poverty-action.org/sites/default/files/publications/Togo-Novissi-Cash-Transfer-Brief-August\%202021.pdf}
 }
 
 @article{jorda_global_2019,
@@ -1120,6 +1141,13 @@
 }
 
 @techreport{world_bank_state_2017,
+  title = {The {{State}} of {{Identification Systems}} in {{Africa}}},
+  author = {World Bank, .},
+  year = {2017},
+  url = {https://documents1.worldbank.org/curated/en/298651503551191964/pdf/119065-WP-ID4D-country-profiles-report-final-PUBLIC.pdf}
+}
+
+@techreport{world_bank_state_2017-1,
   type = {Text/{{HTML}}},
   title = {The {{State}} of Identification Systems in {{Africa}} -- a Synthesis of Country Assessments},
   author = {World Bank},
